--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,7 +20,7 @@
             android:screenOrientation="portrait"
             android:windowSoftInputMode="stateVisible|adjustResize"/>
         <activity
-            android:name=".launch.Welcome"
+            android:name=".Launch.Welcome"
             android:screenOrientation="portrait" />
         <activity
             android:name=".Main.Admin"
@@ -33,7 +33,7 @@
             android:name=".Credentials.Login"
             android:screenOrientation="portrait" />
         <activity
-            android:name=".launch.SplashActivity"
+            android:name=".Launch.SplashActivity"
             android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -41,12 +41,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <service android:name=".Services.FirebaseMessagingService"
-            android:exported="true">
-            <intent-filter>
-                <action android:name="com.google.firebase.INSTANCE_ID_EVENT"/>
-            </intent-filter>
-        </service>
+
     </application>
 
 </manifest>
