--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,4 +49,8 @@ dependencies {
     //storage
     implementation 'com.google.firebase:firebase-storage:19.2.0'
 
+    //Glide
+    implementation 'com.github.bumptech.glide:glide:4.11.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
+
 }
