--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:roundIcon="@drawable/logo2"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Main.Profil"></activity>
+        <activity android:name=".Main.Profil"/>
         <activity android:name=".Main.Promo" />
         <activity
             android:name=".Main.Biodata"
