--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,12 +13,16 @@
         android:roundIcon="@drawable/logo2"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".TestLab.DinamicLayout"
-            android:screenOrientation="portrait"/>
-        <activity android:name=".Main.Profil"
-            android:screenOrientation="portrait"/>
-        <activity android:name=".Main.Promo"
-            android:screenOrientation="portrait"/>
+        <activity android:name=".Main.Details"></activity>
+        <activity
+            android:name=".TestLab.DinamicLayout"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".Main.Profil"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".Main.Promo"
+            android:screenOrientation="portrait" />
         <activity
             android:name=".Main.Biodata"
             android:screenOrientation="portrait"
@@ -36,8 +40,9 @@
         <activity
             android:name=".Credentials.Daftar"
             android:screenOrientation="portrait" />
-        <activity android:name=".Main.Home"
-            android:screenOrientation="portrait"/>
+        <activity
+            android:name=".Main.Home"
+            android:screenOrientation="portrait" />
         <activity
             android:name=".Credentials.Login"
             android:screenOrientation="portrait" />
