--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,8 @@
         android:roundIcon="@drawable/logo2"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Main.Details"></activity>
+        <activity android:name=".Main.Details"
+            android:screenOrientation="portrait"/>
         <activity
             android:name=".TestLab.DinamicLayout"
             android:screenOrientation="portrait" />
