--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,8 @@
         android:theme="@style/AppTheme">
         <activity android:name=".Main.Details"
             android:screenOrientation="portrait"/>
+        <activity android:name=".Main.DetailPromo"
+            android:screenOrientation="portrait"/>
         <activity android:name=".Main.DetailsBerjalan"
             android:screenOrientation="portrait"/>
         <activity
